--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "unistream-音乐",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "unistream-backend",
+  "version": "1.0.0",
+  "description": "Backend proxy for UniStream Music",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "@google/genai": "^1.39.0",
-    "react-dom": "^19.2.4"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "axios": "^1.6.0",
+    "NeteaseCloudMusicApi": "^4.8.10"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "nodemon": "^3.0.0"
   }
 }
