--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "unistream-backend",
+  "name": "unistream-music",
   "version": "1.0.0",
-  "description": "Backend proxy for UniStream Music",
-  "main": "server.js",
+  "description": "UniStream Music Player App",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "server": "node server.js",
+    "android": "npx cap open android"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "@capacitor/android": "^5.7.0",
+    "@capacitor/core": "^5.7.0",
     "axios": "^1.6.0",
-    "NeteaseCloudMusicApi": "^4.8.10"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "lucide-react": "^0.292.0",
+    "NeteaseCloudMusicApi": "^4.8.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "@capacitor/cli": "^5.7.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
