--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -4,38 +4,58 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
+      # 1. 拉取代码
       - uses: actions/checkout@v4
-      
+
+      # 2. 配置 Node.js (已删除 cache: 'npm' 以修复报错)
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
 
+      # 3. 安装依赖并构建网页端
+      # 注意：这里会现场安装 React、Vite 等所有依赖
       - name: Install & Build Web
         run: |
           npm install
-          npm run build # 生成 dist 文件夹
+          npm run build
 
+      # 4. 配置 Java 环境 (用于安卓编译)
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: 'gradle'
 
+      # 5. 初始化 Capacitor 并打包 APK
+      # 这一步会自动创建 android 文件夹，即使你仓库里没有
       - name: Capacitor Android Build
         run: |
-          # 自动初始化安卓环境（如果本地没搞过）
+          # 安装打包工具
           npm install @capacitor/core @capacitor/cli @capacitor/android
+          
+          # 如果没有初始化过，执行初始化 (指向 dist 目录)
+          if [ ! -f "capacitor.config.ts" ] && [ ! -f "capacitor.config.json" ]; then
+            npx cap init "MyMusicApp" "com.pengyanjia.music" --web-dir dist
+          fi
+
+          # 如果没有安卓目录，添加安卓环境
           if [ ! -d "android" ]; then
-            npx cap init "MyMusicApp" "com.example.app" --web-dir dist
             npx cap add android
           fi
-          npx cap sync android
-          cd android && chmod +x gradlew && ./gradlew assembleDebug
 
+          # 同步代码并编译
+          npx cap sync android
+          cd android
+          chmod +x gradlew
+          ./gradlew assembleDebug
+
+      # 6. 上传生成的 APK 供你下载
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
