--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "@capacitor/android": "^5.7.0",
     "@capacitor/core": "^5.7.0",
+    "@distube/ytdl-core": "^4.13.5",
     "axios": "^1.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lucide-react": "^0.292.0",
     "NeteaseCloudMusicApi": "^4.8.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yt-search": "^2.10.4"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.7.0",
