--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,7 +3,7 @@ name: Build Android APK
 on:
   push:
     branches: [ "main" ]
-  workflow_dispatch: # 保留了这个手动按钮，方便你随时点击重跑
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,40 +13,33 @@ jobs:
       packages: write
 
     steps:
-      # 1. 拉取代码
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 2. 配置 Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # 3. 配置 Java 17 (安卓编译必需)
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # 4. 安装依赖
       - name: Install Dependencies
         run: npm install
 
-      # 5. 构建网页 (强制模式)
-      # 使用 npx vite build 跳过 TypeScript 严格检查，防止 Exit Code 2
+      # 关键步骤：使用 npx vite build 跳过 tsc 检查，防止报错
       - name: Build Web Project (Force)
         run: npx vite build
 
-      # 6. 初始化 Capacitor (全自动容错)
-      # 无论你本地有没有 android 文件夹，这里都会自动处理，确保不报错
       - name: Setup Capacitor & Android
         run: |
           npm install @capacitor/core @capacitor/cli @capacitor/android
           
           if [ ! -f "capacitor.config.ts" ] && [ ! -f "capacitor.config.json" ]; then
-            npx cap init "MyMusicApp" "com.pengyanjia.music" --web-dir dist
+            npx cap init "UniStream" "com.unistream.music" --web-dir dist
           fi
 
           if [ ! -d "android" ]; then
@@ -55,14 +48,12 @@ jobs:
 
           npx cap sync android
 
-      # 7. 编译 APK
       - name: Build APK
         run: |
           cd android
           chmod +x gradlew
           ./gradlew assembleDebug
 
-      # 8. 上传产物
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
