--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,7 +1,7 @@
 name: Build Release APK
 
 on:
-  workflow_dispatch: # 手动触发
+  workflow_dispatch:
 
 jobs:
   build:
@@ -31,8 +31,6 @@ jobs:
           npm install @capacitor/core @capacitor/cli @capacitor/android
           npx cap sync android
 
-      # 生成密钥库 (如果你在 GitHub Secrets 配置了 KEYSTORE_BASE64)
-      # 如果没有配置，这一步会跳过，生成的 APK 将是未签名的
       - name: Decode Keystore
         if: secrets.KEYSTORE_BASE64 != ''
         run: |
@@ -46,8 +44,6 @@ jobs:
         run: |
           cd android
           chmod +x gradlew
-          # 如果有 keystore.properties，Gradle 会自动签名（前提是 build.gradle 配置了引用）
-          # 这里我们简单地构建 Release 版本
           ./gradlew assembleRelease
 
       - name: Upload Release APK
