--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,19 +1,18 @@
 name: Build Release APK
 
-on: push
-  # 方案 A: 既支持手动，也支持 PUSH 自动触发
-  workflow_dispatch: 
+on:
   push:
     branches:
-      - main        # 或者写你的当前分支名，比如 'dev'
+      - main
       - master
-
-jobs:
-  # ... 下面内容不变 ...
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+
     steps:
       - uses: actions/checkout@v4
       
@@ -39,28 +38,18 @@ jobs:
           npm install @capacitor/core @capacitor/cli @capacitor/android
           npx cap sync android
 
-      - name: Decode Keystore & Build
-        env:
-          # 直接把 Secret 传进环境变量，不使用 if 判断
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+      - name: Decode Keystore
+        if: env.KEYSTORE_BASE64 != ''
+        run: |
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/keystore.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/keystore.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/keystore.properties
+          echo "storeFile=release.keystore" >> android/keystore.properties
+
+      - name: Build Release APK
         run: |
           cd android
-          
-          # Shell 脚本内部判断：如果有密钥，就生成文件
-          if [ -n "$KEYSTORE_BASE64" ]; then
-            echo "发现密钥，正在配置签名..."
-            echo "$KEYSTORE_BASE64" | base64 --decode > app/release.keystore
-            echo "storePassword=$KEYSTORE_PASSWORD" > keystore.properties
-            echo "keyPassword=$KEY_PASSWORD" >> keystore.properties
-            echo "keyAlias=$KEY_ALIAS" >> keystore.properties
-            echo "storeFile=release.keystore" >> keystore.properties
-          else
-            echo "未发现密钥，将构建未签名版本..."
-          fi
-          
           chmod +x gradlew
           ./gradlew assembleRelease
 
